Redis ve Clickhouse yapılandırmaları güncellendi, localhost adresleri twinup-redis ve twinup-clickhouse ile değiştirildi. Ayrıca, metrik portları 8080 ve 8081'den 9080 ve 9081'e güncellendi.

--- a/configs/auth-config.yaml
+++ b/configs/auth-config.yaml
@@ -24,7 +24,7 @@ jwt:
   max_concurrent_sessions: 5      # Max sessions per user
 
 redis:
-  host: "localhost"
+  host: "twinup-redis"
   port: 6379
   password: ""                    # No password for development
   database: 1                     # Use DB 1 for auth (different from consumer)
