--- a/services/api-gateway-service/configs/config.yaml
+++ b/services/api-gateway-service/configs/config.yaml
@@ -14,7 +14,7 @@ http:
   enable_rate_limit: true         # Enable rate limiting
 
 redis:
-  host: "localhost"
+  host: "twinup-redis"
   port: 6379
   password: ""                    # No password for development
   database: 0                     # Same as consumer service for shared cache
@@ -28,7 +28,7 @@ redis:
   cache_ttl: "5m"                 # Default cache TTL
 
 clickhouse:
-  host: "localhost"
+  host: "twinup-clickhouse"
   port: 9000
   database: "sensor_data"
   username: "twinup"
@@ -63,7 +63,7 @@ gateway:
 
 metrics:
   enabled: true
-  port: 8081                      # Same port as HTTP for simplicity
+  port: 9081                      # Separate metrics port
   path: "/metrics"
 
 logger:
